# Eastern-Culture-App

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0c0fd312a11d_third_migration.py  14413faba71c_second_migration.py  7f97743ec0a4_initial_migration.py
app/api/routers/: articles.py  articles_router.py  categories.py  categories_router.py  images.py  pages.py
app/api/schemas/: articles.py  categories.py  categories_schemas.py
app/database/: session.py
app/database/models/: __init__.py  article.py  category.py  comment.py
app/database/service/: article.py  article_service.py  base.py  category.py  category_service.py
app/static/css/: articles.css  single.css  styles.css
app/templates/: articles.html  base.html  home.html  single_article.html
